# tokenwise

./: .gitignore  Cargo.toml  README.md
.atl/: skill-registry.md
.github/workflows/: ci.yml  release.yml
adapter-claude/: Cargo.toml
adapter-claude/src/: connector.rs  lib.rs  mcp_servers.rs
adapter-hermes/: Cargo.toml
adapter-hermes/src/: connector.rs  lib.rs  models.rs
openspec/: config.yaml
openspec/changes/archive/2026-07-18-tokenwise-core/: archive-report.md  design.md  proposal.md  spec.md  tasks.md
openspec/changes/tokenwise-core/: design.md  proposal.md  spec.md
scripts/: install.ps1  install.sh
tokenwise/: Cargo.toml
tokenwise-common/: Cargo.toml
tokenwise-common/src/: backup.rs  error.rs  exit_code.rs  lib.rs  output.rs  platform.rs
tokenwise-core/: Cargo.toml
tokenwise-core/src/: doctor.rs  install.rs  lib.rs  mcp_registry.rs  rules_writer.rs  stats.rs  sync.rs
tokenwise-core/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
tokenwise-core/src/settings/: mod.rs  models.rs
tokenwise/src/: main.rs
tokenwise/src/commands/: connect.rs  doctor.rs  install.rs  mod.rs  stats.rs  sync.rs
tokenwise/tests/: cli_tests.rs
