[package]
name = "adapter-hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenwise-core = { path = "../tokenwise-core" }
tokenwise-common = { path = "../tokenwise-common" }
adapter-claude = { path = "../adapter-claude" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"

[dev-dependencies]
tempfile = "3"
