[package]
name = "tokenwise"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokenwise"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
adapter-claude = { path = "../adapter-claude" }
adapter-hermes = { path = "../adapter-hermes" }
tokenwise-core = { path = "../tokenwise-core" }
tokenwise-common = { path = "../tokenwise-common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
